[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Heroes/Axis/Banner3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Heroes/Axis/Banner1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/TestSummonBannerCarousel2.gd" type="Script" id=3]
[ext_resource path="res://Assets/Heroes/Axis/Banner2.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/decrement_pressed = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/icons/increment_pressed = null
HScrollBar/styles/grabber = SubResource( 1 )
HScrollBar/styles/grabber_highlight = SubResource( 2 )
HScrollBar/styles/grabber_pressed = SubResource( 3 )
HScrollBar/styles/scroll = SubResource( 4 )
HScrollBar/styles/scroll_focus = SubResource( 5 )

[node name="SummonBannerCarousel2" type="VBoxContainer"]
rect_min_size = Vector2( 614, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerContainer" type="ScrollContainer" parent="."]
margin_right = 614.0
margin_bottom = 211.0
rect_min_size = Vector2( 614, 211 )
theme = SubResource( 6 )
scroll_vertical_enabled = false

[node name="Banners" type="HBoxContainer" parent="BannerContainer"]
margin_right = 3684.0
margin_bottom = 211.0
rect_min_size = Vector2( 614, 211 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner1" type="TextureRect" parent="BannerContainer/Banners"]
margin_right = 614.0
margin_bottom = 211.0
rect_min_size = Vector2( 614, 211 )
texture = ExtResource( 2 )

[node name="Banner2" type="TextureRect" parent="BannerContainer/Banners"]
margin_left = 614.0
margin_right = 1228.0
margin_bottom = 211.0
rect_min_size = Vector2( 614, 211 )
texture = ExtResource( 4 )

[node name="Banner3" type="TextureRect" parent="BannerContainer/Banners"]
margin_left = 1228.0
margin_right = 1842.0
margin_bottom = 211.0
rect_min_size = Vector2( 614, 211 )
texture = ExtResource( 1 )

[node name="Banner4" type="TextureRect" parent="BannerContainer/Banners"]
margin_left = 1842.0
margin_right = 2456.0
margin_bottom = 211.0
rect_min_size = Vector2( 614, 211 )
texture = ExtResource( 2 )

[node name="Banner5" type="TextureRect" parent="BannerContainer/Banners"]
margin_left = 2456.0
margin_right = 3070.0
margin_bottom = 211.0
rect_min_size = Vector2( 614, 211 )
texture = ExtResource( 4 )

[node name="Banner6" type="TextureRect" parent="BannerContainer/Banners"]
margin_left = 3070.0
margin_right = 3684.0
margin_bottom = 211.0
rect_min_size = Vector2( 614, 211 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="BannerContainer"]
playback_speed = 0.2
playback/speed = 0.2

[node name="ChangeBannerTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="BannerButtons2" type="HBoxContainer" parent="."]
margin_top = 215.0
margin_right = 614.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 15 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="scroll_ended" from="BannerContainer" to="." method="_on_BannerContainer_scroll_ended"]
[connection signal="scroll_started" from="BannerContainer" to="." method="_on_BannerContainer_scroll_started"]
